BackendAPI & most web views support sorting
The backend API takes a single sort key
+ ascending/descending info

All web views that already use v-data-table
have been converted. Stores and Tokens views still
need to be converted.
